# ArisaMatsuda

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  README_zh-TW.md  main.py  package.json  requirements.txt
.zed/: debug.json
cogs/: ask.py  communication.py  domain.py  emotes.py  event.py  exp.py  goods.py  help.py  join.py  mltdevent.py  ouen.py  ping.py  repeat.py  retweet.py  test.py  toggle.py  twitterFix.py  verification.py
cogs/archive/: reply.py  toggle.py
cogs/command/: keywords.py  rpcstart.py  task.py  verification.py
cogs/commands/: general.py  keywords.py  verification.py
cogs/components/: emotes.py  ouen.py  ping.py  tag.py
cogs/desperate/: help.py  join.py  ouen.py  repeat.py  retweet.py  verification.py
cogs/error/: tantou.py
cogs/modules/: embed_generator.py
cogs/slash/: emotes.py  ping.py  toggle.py
cogs/src/: embed_generator.py  fetch_tweet.py  get_contents.py  video_upload.py
cogs/src/mltdevent/: fetch.py  image.py  (+2 more)
config/: scope.json
configuration/: scope.json  unique.json
core/: scopes.py  secrets.py
core/config/: scope.json
res/: keywords.json
src/: class_logger.py  config.toml  database.py  main.py  main.rs  mapping.py  types.py
src/cogs/: ask.py  communication.py  conversation.py  delete.py  fun.py  join.py  retweet.py  tweet_fix.py  tweet_parser.py  tweet_subscribe.py  twitterFix.py
src/commands/: author.rs  embed.rs  instagram.rs  mod.rs  patcher.rs  transcripter.rs  tweet.rs  twitter.rs
src/module/: content_util.py  embed_util.py  fetch_tweet.py  get_tokens.py  html_parser.py  tweets_segment.py
(+2 files in other folders)
