[package]
name = "arisa_rust"
version = "3.0.0"
authors = ["LTurret <a0919329@gmail.com>"]
edition = "2024"

[dependencies]
async-trait = "0.1.89"
dotenv = "0.15.0"
html-escape = "0.2.13"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["cookies", "json"] }
serde_json = "1.0.145"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
